--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -32,6 +32,6 @@
     </div>
 
   </div>
-  <script src="./js/1-timer.js"></script>
+  <script src="./js/1-timer.js" type="module"></script>
 </body>
 </html>
