--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link type="image/svg+xml" href="/favicon.svg" rel="icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla App Template</title>
+    <title>ДЗ - 10</title>
     <link href="./css/styles.css" rel="stylesheet">
   </head>
   <body>
