--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,8 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="./css/styles.css" rel="stylesheet">
+
 </head>
 <body>
-  <script src="./2-snackbar.html"></script>
+  <form class="form">
+    <label>
+      Delay (ms)
+      <input name="delay" type="number" required>
+    </label>
+
+    <fieldset>
+      <legend>State</legend>
+      <label>
+        <input name="state" type="radio" value="fulfilled" required>
+        Fulfilled
+      </label>
+      <label>
+        <input name="state" type="radio" value="rejected" required>
+        Rejected
+      </label>
+    </fieldset>
+
+    <button type="submit">Create notification</button>
+  </form>
+  <script src="./js/2-snackbar.js" type="module"></script>
 </body>
 </html>
