--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="./1-timer.html">timer</a></li>
-      <li><a href="./2-snackbar.html">snackbar</a></li>
+      <li><a href="./1-timer.html">1 - timer</a></li>
+      <li><a href="./2-snackbar.html">2 - snackbar</a></li>
     </ul>
   </body>
 </html>
